--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "axios": "^1.6.2",
-    "lodash": "^4.17.21",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
